--- a/.github/workflows/notify-main-repo.yml
+++ b/.github/workflows/notify-main-repo.yml
@@ -7,14 +7,24 @@ on:
     paths:
       - 'posts/**'
       - 'uploads/**'
+  workflow_dispatch: # Allow manual triggering
 
 jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout content repository
+        uses: actions/checkout@v3
+
+      - name: Get commit message
+        id: get_commit_message
+        run: |
+          echo "COMMIT_MESSAGE=$(git log -1 --pretty=%B)" >> $GITHUB_OUTPUT
+
       - name: Trigger build in main repository
         uses: peter-evans/repository-dispatch@v2
         with:
           token: ${{ secrets.GH_PAT }}
           repository: vipinbihari/blog_cms
           event-type: content-update
+          client-payload: '{"ref": "${{ github.ref }}", "commit_message": "${{ steps.get_commit_message.outputs.COMMIT_MESSAGE }}"}'
